# Jr-Chess-SFML

./: .gitignore  CMakeLists.txt  Doxyfile  README.MD
docs/html/: AIPlayer_8hpp_source.html  AboutState_8hpp_source.html  Board_8hpp_source.html  Button_8hpp_source.html  ChessLogic_8hpp_source.html  FontManager_8hpp_source.html  GameConfigState_8hpp_source.html  GameOverState_8hpp_source.html  GameState_8hpp_source.html  Game_8hpp_source.html  HelpState_8hpp_source.html  MenuState_8hpp_source.html  Piece_8hpp_source.html  PlayingState_8hpp_source.html  StateManager_8hpp_source.html  StateManager_8inl_source.html  TextureManager_8hpp_source.html  annotated.html  annotated_dup.js  classJr_1_1AIPlayer-members.html  classJr_1_1AIPlayer.html  classJr_1_1AboutState-members.html  classJr_1_1AboutState.html  classJr_1_1AboutState.js  classJr_1_1AboutState__coll__graph.dot  classJr_1_1AboutState__coll__graph.map  classJr_1_1AboutState__coll__graph.md5  classJr_1_1AboutState__inherit__graph.map  classJr_1_1AboutState__inherit__graph.md5  classJr_1_1Board-members.html  classJr_1_1Board.html  classJr_1_1Board.js  classJr_1_1Board__coll__graph.map  classJr_1_1Board__coll__graph.md5  classJr_1_1Button-members.html  classJr_1_1Button.html  classJr_1_1Button.js  classJr_1_1ChessLogic-members.html  classJr_1_1ChessLogic.html  classJr_1_1ChessLogic.js  (+112 more)
docs/latex/: AboutState_8hpp_source.tex  Board_8hpp_source.tex  Button_8hpp_source.tex  Game_8hpp_source.tex  (+39 more)
include/: AIPlayer.hpp  AboutState.hpp  Board.hpp  Button.hpp  ChessLogic.hpp  FontManager.hpp  Game.hpp  GameConfigState.hpp  GameOverState.hpp  GameState.hpp  HelpState.hpp  MenuState.hpp  Piece.hpp  PlayingState.hpp  StateManager.hpp  StateManager.inl  TextureManager.hpp  constants.hpp
source/: AIPlayer.cpp  AboutState.cpp  Board.cpp  Button.cpp  ChessLogic.cpp  ChessLogicManager.cpp  FontManager.cpp  Game.cpp  GameConfigState.cpp  GameOverState.cpp  GameState.cpp  HelpState.cpp  MenuState.cpp  PlayingState.cpp  StateManager.cpp  TextureManager.cpp  main.cpp
(+50 files in other folders)
